style.css
/*
Theme Name: The Couples Collective
Version: 0.69
Description: Updated site for the Bay Area Couples Collective
Tags: private, static
Author: Angel Damion Robles and CJ Garcia
*/

@font-face {
    font-family: 'Work Sans';
    src: url('../couples-collective/assets/fonts/WorkSans/WorkSans-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Work Sans Bold';
    src: url('../couples-collective/assets/fonts/WorkSans/WorkSans-Bold.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Libre Baskerville Bold';
    src: url('../couples-collective/assets/fonts/LibreBaskerville/LibreBaskerville-Bold.ttf');
    font-weight: normal;
    font-style: normal;
}

:root {
    --font-work-sans-regular: 'Work Sans', sans-serif;
    --font-work-sans-bold: 'Work Sans Bold', sans-serif;
    --font-libre-serif: 'Libre Baskerville Bold', serif;
    --standard-green: #4e8d6b;
    --standard-light-gray: #e0e0e0;
    --standard-gray: #3F4447;
    --standard-purple: #91639B;
    --standard-blue: #145174;
    --standard-red: #CD4F26;
    --standard-black: #1b1c1e;
    --standard-radius: 27px;
    --standard-padding: 156px;
    --laptop-padding: 56px;
    --tablet-padding: 78px;
    --mobile-padding: 16px;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    font-family: var(--font-work-sans-regular);
}

body {
    margin-left: auto;
    margin-right: auto;
}

.desktop {
    display: block;
}

.mobile {
    display: none;
}

#media-level::before {
    display: block;
    content: "Desktop";
    color: lightblue;
    font-size: 16px;
    position: fixed;
    top: 0;
    z-index: 5;
    background-color: transparent;
}

.fill-button {
    white-space: nowrap;
    background-color: var(--standard-green);
    border: solid 2px var(--standard-green);
    color: white;
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    font-weight: 500;
    border-radius: var(--standard-radius);
    transition: 0.2s all ease-in-out;

    &:hover {
        color: var(--standard-green);
        background-color: white;
        cursor: pointer;
    }
}


.outline-button {
    white-space: nowrap;
    background-color: transparent;
    border: solid 2px;
    border-color: #FFFFFF;
    color: #FFFFFF;
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    border-radius: var(--standard-radius);
    transition: 0.2s all ease-in-out;

    &:hover {
        color: white;
        background-color: var(--standard-green);
        cursor: pointer;
    }
}

.outline-button-two {
    white-space: nowrap;
    background-color: transparent;
    border: solid 2px;
    border-color: var(--standard-green);
    color: var(--standard-green);
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    border-radius: var(--standard-radius);
    transition: 0.2s all ease-in-out;

    &:hover {
        color: white;
        background-color: var(--standard-green);
        cursor: pointer;
    }

}

#navigation {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 3;
}

#navigation .menu-item {
    list-style-type: none;
}

#navigation .header-flex {
    margin-left: auto;
    margin-right: auto;
    max-width: calc(1440px - (2 * var(--standard-padding)));

    color: var(--standard-black);
    display: flex;
    justify-content: space-between;
    column-gap: 16px;
    align-items: center;
    padding: 40px var(--standard-padding);
}

#navigation .container {
    display: flex;
    justify-content: space-between;
}

#navigation .title {
    font-size: 32px;
    font-family: var(--font-work-sans-bold);
    color: var(--standard-black);
    white-space: nowrap;
}

#navigation .title a {
    color: var(--standard-black);
    text-decoration: none;
    word-break: keep-all;
}

#navigation .right-nav-desktop {
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    column-gap: 32px;
    font-size: 14px;
    font-family: var(--font-work-sans-regular);
    max-width: 600px;
    width: 100%;
}

#navigation .right-nav-desktop .menu-links {
    display: flex;
    flex-direction: row;
    width: 100%;
    align-items: center;
    column-gap: 32px;
    justify-content: space-between;
    max-width: 380px;
    white-space: nowrap;
}

#navigation .right-nav-desktop .menu-links a {
    text-decoration: none;
    color: var(--standard-black);
    transition: 0.2s all ease-in-out;

    &:hover {
        color: var(--standard-green);
    }

    &:visited {
        color: var(--standard-black);
    }
}

#navigation .tablet-mobile-nav-row {
    display: none;
    /* border-bottom-left-radius: var(--standard-radius);
    border-bottom-right-radius: var(--standard-radius); */
}

#navigation .topnav {
    overflow: hidden;
    background-color: transparent;
    position: relative;
    text-align: right;
}

#navigation .topnav #myLinks {
    display: none;
}

#navigation .topnav #myLinks .text-links a {
    white-space: nowrap;
    color: var(--standard-black);
    text-decoration: none;
}

#navigation .topnav li {
    list-style-type: none;
}

#navigation .topnav li {
    padding: 5px;
}

#navigation .topnav div {
    padding: 5px;
}

#navigation .topnav a.icon {
    background: transparent;
    display: block;
    position: relative;
    right: 0;
    top: 0;
}


#section-one {
    position: relative;
}

#section-one video {
    width: 100%;
}

#section-one .container {
    color: white;
    font-family: var(--font-work-sans-regular);
}
/* ... */

